# cNES

./: .gitignore  .gitmodules  CMakeLists.txt  COMPATIBILITY.md  HEADER.txt  Makefile  README.md
doc/: COMPATIBILITY.md
include/: apu.h  cartridge.h  fs.h  loader.h  ppu.h  renderer.h  sdl_manager.h  state.h  system.h  util.h
include/cpu/: cpu.h  instrs.h
include/input/: input_device.h
include/input/global/: hotkeys.h  toggles.h
include/input/standard/: sc_driver.h  standard_controller.h
include/mappers/: mappers.h  nrom.h
include/ppu/: ppu.h
scripts/: apply_license_headers.sh
src/: apu.c  fs.c  loader.c  main.c  ppu.c  renderer.c  sdl_manager.c  state.c  system.c
src/cpu/: cpu.c  instrs.c
src/input/: hotkeys.c  input_device.c
src/input/global/: hotkeys.c  toggles.c
src/input/standard/: sc_driver.c  standard_controller.c
src/mappers/: axrom.c  cnrom.c  cnrom_copy.c  color_dreams.c  mmc1.c  mmc3.c  namco_1xx.c  nrom.c  unrom.c
src/ppu/: ppu.c
test/include/: test_assert.h
test/include/cpu/: cpu_tester.h
test/res/: branch.asm  store_load.asm
test/src/: testmain.c
test/src/cpu/: cpu_tester.c
test/src/cpu/tests/: test_addition.c  test_arithmetic.c  test_branch.c  test_interrupt.c  test_logic.c  test_stack.c  test_status.c  test_store_load.c  test_subtraction.c
